[gd_scene load_steps=4 format=2]

[ext_resource path="res://menus/Mode.gd" type="Script" id=1]
[ext_resource path="res://menus/elianto_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://menus/elianto_32.tres" type="DynamicFont" id=3]

[node name="Mode" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 30.0
margin_right = -40.0
margin_bottom = -30.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="VSplitContainer"]
margin_right = 464.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.984314, 0.439216, 0.439216, 1 )
text = "I am:"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer"]
margin_top = 60.0
margin_right = 464.0
margin_bottom = 246.0
custom_constants/separation = 23
alignment = 1

[node name="fun" type="Button" parent="VSplitContainer/VBoxContainer"]
margin_top = 13.0
margin_right = 464.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 3 )
action_mode = 0
text = "Playing for fun"
flat = true

[node name="data" type="Button" parent="VSplitContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 464.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 3 )
action_mode = 0
text = "Willing to share data"
flat = true

[node name="Back" type="Button" parent="VSplitContainer/VBoxContainer"]
margin_left = 157.0
margin_top = 135.0
margin_right = 306.0
margin_bottom = 173.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Go back"

[connection signal="pressed" from="VSplitContainer/VBoxContainer/fun" to="." method="_on_fun_pressed"]
[connection signal="pressed" from="VSplitContainer/VBoxContainer/data" to="." method="_on_data_pressed"]
[connection signal="pressed" from="VSplitContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
